fix(ui): preserve media query states and enable structural hard reflow
- Fix XplMediaNode state retention (`isActive`) in JavaFxMediaListener.addMediaNode during virtual DOM re-creations.
- Connect media listener triggers to MainWindow.forceLayoutRebuild for seamless structural layout updates (hard reflow) on window resize breakpoints.
- Isolate and correctly apply active media query rules to the virtual DOM tree before layout evaluation.